tooling/nargo_cli/tests/snapshots/execution_failure/brillig_assert_msg_runtime/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected x to equal 10, but got 0x05
  ┌─ src/main.nr:9:12
  │
9 │     assert(x == 10, f"Expected x to equal 10, but got {x}");
  │            ------- Assertion failed
  │
  = Call stack:
    1. src/main.nr:1:4
    2. src/main.nr:3:26

Error interpreting main function
